# spyware-rust

./: Cargo.toml  README.md
spyware-rust/: Cargo.toml
src/: main.rs
