[package]
name = "spyware-rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
reqwest = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.23"
psutil = "3.2"
screenshot = "0.0.5"
base64 = "0.12"
nix = "0.27"


